--- a/index.html
+++ b/index.html
@@ -20,21 +20,28 @@
                 <a href="#home" class="logo" aria-label="Về trang chủ">
                     <img src="public/Ảnh Logo.png" alt="Logo Tyna HR Online">
                 </a>
-                <!-- Thêm phần tìm kiếm -->
-                <div class="search-container">
-                    <form class="search-form" action="#" method="GET">
-                        <div class="search-logo">
-                            <img src="public/LOGO WEBSITE NGOÀI.jpg" alt="Logo Website" class="search-logo-img">
-                        </div>
-                        <input type="text" placeholder="Tìm kiếm việc làm..." class="search-input">
-                        <button type="submit" class="search-button">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <circle cx="11" cy="11" r="8"></circle>
-                                <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-                            </svg>
-                        </button>
-                    </form>
-                </div>
+    <!-- Phần tìm kiếm -->
+    <div class="search-container">
+  <form class="search-form" action="#" method="GET">
+    <div class="search-logo">
+      <img src="/LOGO-WEBSITE-NGOAI.jpg" alt="Logo Website" class="search-logo-img">
+    </div>
+    <input 
+      type="text" 
+      name="q"
+      placeholder="Tìm kiếm việc làm..." 
+      class="search-input"
+      aria-label="Tìm kiếm việc làm">
+    <button type="submit" class="search-button" aria-label="Tìm kiếm">
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" 
+           viewBox="0 0 24 24" fill="none" stroke="currentColor" 
+           stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <circle cx="11" cy="11" r="8"></circle>
+        <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+      </svg>
+    </button>
+  </form>
+</div>
                 <nav class="nav" id="nav" role="navigation" aria-label="Menu chính">
                     <!-- Desktop Menu -->
                     <div class="desktop-menu">
