--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="description" content="Vieclamonline24h - Đơn vị tuyển dụng chuyên nghiệp kết nối nhân tài với các công ty hàng đầu">
     <title>Vieclamonline24h - Cơ Hội Việc Làm Online Chuyên Nghiệp, Uy Tín Số 1 Thị Trường</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="public/LOGO WEBSITE NGOÀI.jpg">
-    <link rel="apple-touch-icon" href="public/LOGO WEBSITE NGOÀI.jpg">
+    <!-- Using the JPG file as a quick favicon; note: some browsers prefer PNG/ICO. If you still don't see it, clear cache or provide a PNG/ICO version. -->
+    <link rel="icon" href="public/LOGO WEBSITE NGOÀI.jpg?v=1" type="image/jpeg">
+    <link rel="shortcut icon" href="public/LOGO WEBSITE NGOÀI.jpg?v=1" type="image/jpeg">
+    <link rel="apple-touch-icon" href="public/LOGO WEBSITE NGOÀI.jpg?v=1">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
