--- a/index.html
+++ b/index.html
@@ -419,6 +419,13 @@
                             </div>
                         </div>
                         <div class="highlight-item">
+                        <span class="highlight-icon">⏰</span>
+                        <div class="highlight-info">
+                            <h4>Thời gian</h4>
+                            <p>12h-16h30 & 18h30-23h</p>
+                        </div>
+                    </div>
+                        <div class="highlight-item">
                             <span class="highlight-icon">🏢</span>
                             <div class="highlight-info">
                                 <h4>Công Ty</h4>
@@ -459,6 +466,7 @@
                             <h3>🎁 Quyền Lợi</h3>
                             <ul>
                                 <li><span class="benefit-highlight">Thu nhập:</span> Lương 14-17 triệu + thưởng dự án</li>
+                                 <li><span class="benefit-highlight">Thời gian làm việc:</span> 8 tiếng 30 phút/ngày, tháng off 4 ngày có lương</li>
                                 <li><span class="benefit-highlight">Môi trường:</span> Sáng tạo, năng động, hỗ trợ phát triển cá nhân</li>
                                 <li><span class="benefit-highlight">Đào tạo:</span> Được đào tạo nâng cao kỹ năng thiết kế, cập nhật xu hướng mới</li>
                                 <li><span class="benefit-highlight">Chế độ:</span> Thưởng lễ, du lịch, team building</li>
@@ -513,6 +521,13 @@
                             </div>
                         </div>
                         <div class="highlight-item">
+                        <span class="highlight-icon">⏰</span>
+                        <div class="highlight-info">
+                            <h4>Thời gian</h4>
+                            <p>12h-16h30 & 18h30-22h30</p>
+                        </div>
+                    </div>
+                        <div class="highlight-item">
                             <span class="highlight-icon">🏢</span>
                             <div class="highlight-info">
                                 <h4>Công Ty</h4>
@@ -552,6 +567,7 @@
                             <h3>🎁 Quyền Lợi</h3>
                             <ul>
                                 <li><span class="benefit-highlight">Thu nhập:</span> Lương 8-10 triệu + hiệu suất</li>
+                                 <li><span class="benefit-highlight">Thời gian làm việc:</span> 8 tiếng/ngày, tháng off 4 ngày có lương</li>
                                 <li><span class="benefit-highlight">Môi trường:</span> Năng động, chuyên nghiệp, thân thiện</li>
                                 <li><span class="benefit-highlight">Đào tạo:</span> Được đào tạo kỹ năng chuyên môn và phát triển nghề nghiệp</li>
                                 <li><span class="benefit-highlight">Chế độ:</span> Thưởng thâm niên 6 tháng và thâm niên 1 năm 20 triệu</li>
@@ -606,6 +622,13 @@
                             </div>
                         </div>
                         <div class="highlight-item">
+                        <span class="highlight-icon">⏰</span>
+                        <div class="highlight-info">
+                            <h4>Thời gian</h4>
+                            <p>Dựa vào lịch trận bóng</p>
+                        </div>
+                    </div>
+                        <div class="highlight-item">
                             <span class="highlight-icon">🏢</span>
                             <div class="highlight-info">
                                 <h4>Công Ty</h4>
@@ -645,6 +668,7 @@
                             <h3>🎁 Quyền Lợi</h3>
                             <ul>
                                 <li><span class="benefit-highlight">Thu nhập:</span> 300-500K mỗi trận đấu</li>
+                                 <li><span class="benefit-highlight">Thời gian làm việc:</span> Được hỗ trợ sắp xếp linh hoạt dựa trên lịch trận bóng</li>
                                 <li><span class="benefit-highlight">Môi trường:</span> Năng động, chuyên nghiệp, đam mê bóng đá</li>
                                 <li><span class="benefit-highlight">Đào tạo:</span> Được đào tạo kỹ năng bình luận và phân tích chuyên sâu</li>
                                 <li><span class="benefit-highlight">Chế độ:</span> Thưởng theo hiệu suất và lượt xem</li>
@@ -699,6 +723,13 @@
                                     </div>
                                 </div>
                                 <div class="highlight-item">
+                        <span class="highlight-icon">⏰</span>
+                        <div class="highlight-info">
+                            <h4>Thời gian</h4>
+                            <p>8-12h & 13-17h</p>
+                        </div>
+                    </div>
+                                <div class="highlight-item">
                                     <span class="highlight-icon">🏢</span>
                                     <div class="highlight-info">
                                         <h4>Công Ty</h4>
@@ -738,6 +769,7 @@
                                     <h3>🎁 Quyền Lợi</h3>
                                     <ul>
                                         <li><span class="benefit-highlight">Thu nhập:</span> Lương 10-15 triệu + phụ cấp (nếu có)</li>
+                                         <li><span class="benefit-highlight">Thời gian làm việc:</span> 8 tiếng/ngày, tháng off 4 ngày có lương</li>
                                         <li><span class="benefit-highlight">Môi trường:</span> Năng động, thân thiện, được đi nhiều nơi, rèn luyện kỹ năng giao tiếp thực tế</li>
                                         <li><span class="benefit-highlight">Đào tạo:</span> Hướng dẫn chi tiết về quy trình khảo sát, ghi nhận dữ liệu và kỹ năng tiếp thị trực tiếp</li>
                                         <li><span class="benefit-highlight">Chế độ:</span> Thưởng thâm niên 6 tháng và thâm niên 1 năm 20 triệu</li>
@@ -843,6 +875,13 @@
                         </div>
                     </div>
                     <div class="highlight-item">
+                        <span class="highlight-icon">⏰</span>
+                        <div class="highlight-info">
+                            <h4>Thời gian</h4>
+                            <p>8-18h / 14-22h / 22-8h</p>
+                        </div>
+                    </div>
+                    <div class="highlight-item">
                         <span class="highlight-icon">🏢</span>
                         <div class="highlight-info">
                             <h4>Công Ty</h4>
@@ -885,6 +924,7 @@
                         <h3>🎁 Quyền Lợi</h3>
                         <ul>
                             <li><span class="benefit-highlight">Thu nhập:</span> Thử việc: 15 triệu - Chính thức 20 triệu + Thưởng Hiệu suất</li>
+                            <li><span class="benefit-highlight">Thời gian làm việc:</span> 10 tiếng/ngày, tháng off 4 ngày có lương</li>
                             <li><span class="benefit-highlight">Môi trường:</span> Năng động, chuyên nghiệp, thân thiện</li>
                             <li><span class="benefit-highlight">Đào tạo:</span> Được đào tạo kỹ năng tư vấn khách hàng và xử lý tình huống</li>
                             <li><span class="benefit-highlight">Chế độ:</span> Lương tháng 13, thưởng lễ...</li>
@@ -922,6 +962,13 @@
                         <div class="highlight-info">
                             <h4>Mức Lương</h4>
                             <p>11-12 triệu</p>
+                        </div>
+                    </div>
+                    <div class="highlight-item">
+                        <span class="highlight-icon">⏰</span>
+                        <div class="highlight-info">
+                            <h4>Thời gian</h4>
+                            <p>12h-16h30 & 18h30-23h</p>
                         </div>
                     </div>
                     <div class="highlight-item">
@@ -966,6 +1013,7 @@
                             <h3>🎁 Quyền Lợi</h3>
                             <ul>
                                 <li><span class="benefit-highlight">Thu nhập:</span> Lương cơ bản 11-12 triệu + thưởng dự án</li>
+                                <li><span class="benefit-highlight">Thời gian làm việc:</span> 8 tiếng 30 phút/ngày, tháng off 4 ngày có lương</li>
                                 <li><span class="benefit-highlight">Môi trường:</span> Sáng tạo, năng động và chuyên nghiệp</li>
                                 <li><span class="benefit-highlight">Phát triển:</span> Cơ hội học hỏi và nâng cao kỹ năng</li>
                                 <li><span class="benefit-highlight">Chế độ:</span> Thưởng thâm niên 6 tháng và thâm niên 1 năm 20 triệu</li>
@@ -1003,6 +1051,13 @@
                         <div class="highlight-info">
                             <h4>Mức Lương</h4>
                             <p>15-20 triệu + hoa hồng</p>
+                        </div>
+                    </div>
+                    <div class="highlight-item">
+                        <span class="highlight-icon">⏰</span>
+                        <div class="highlight-info">
+                            <h4>Thời gian</h4>
+                            <p>12h-16h30 & 18h30-23h</p>
                         </div>
                     </div>
                     <div class="highlight-item">
@@ -1048,6 +1103,7 @@
                         <h3>🎁 Quyền Lợi</h3>
                         <ul>
                             <li><span class="benefit-highlight">Thu nhập:</span> Lương cơ bản 15-20 triệu + Hoa hồng không giới hạn</li>
+                             <li><span class="benefit-highlight">Thời gian làm việc:</span> 8 tiếng 30 phút/ngày, tháng off 4 ngày có lương</li>
                             <li><span class="benefit-highlight">Thưởng:</span> Thưởng theo hiệu quả chiến dịch và KPI</li>
                             <li><span class="benefit-highlight">Chế độ:</span> Thưởng thâm niên 6 tháng và thâm niên 1 năm 20 triệu</li>
                             <li><span class="benefit-highlight">Đào tạo:</span> Được đào tạo về digital marketing và kỹ năng chuyên môn</li>
@@ -1086,6 +1142,13 @@
                         <div class="highlight-info">
                             <h4>Mức Lương</h4>
                             <p>19-24 triệu</p>
+                        </div>
+                    </div>
+                    <div class="highlight-item">
+                        <span class="highlight-icon">⏰</span>
+                        <div class="highlight-info">
+                            <h4>Thời gian</h4>
+                            <p>12h-16h30 & 18h30-23h</p>
                         </div>
                     </div>
                     <div class="highlight-item">
@@ -1131,6 +1194,7 @@
                         <h3>🎁 Quyền Lợi</h3>
                         <ul>
                             <li><span class="benefit-highlight">Thu nhập:</span> Lương 19-24 triệu + thưởng dự án</li>
+                             <li><span class="benefit-highlight">Thời gian làm việc:</span> 8 tiếng 30 phút/ngày, tháng off 4 ngày có lương</li>
                             <li><span class="benefit-highlight">Môi trường:</span> Sáng tạo, năng động, hỗ trợ phát triển cá nhân</li>
                             <li><span class="benefit-highlight">Đào tạo:</span> Được đào tạo nâng cao kỹ năng thiết kế, cập nhật xu hướng mới</li>
                             <li><span class="benefit-highlight">Chế độ:</span> Thưởng lễ, du lịch, team building</li>
@@ -1167,6 +1231,13 @@
                         <div class="highlight-info">
                             <h4>Mức Lương</h4>
                             <p>19-24 triệu</p>
+                        </div>
+                    </div>
+                    <div class="highlight-item">
+                        <span class="highlight-icon">⏰</span>
+                        <div class="highlight-info">
+                            <h4>Thời gian</h4>
+                            <p>12h-16h30 & 18h30-23h</p>
                         </div>
                     </div>
                     <div class="highlight-item">
@@ -1217,6 +1288,7 @@
                         <h3>🎁 Quyền Lợi</h3>
                         <ul>
                             <li><span class="benefit-highlight">Thu nhập:</span> Lương 19-24 triệu + thưởng dự án</li>
+                            <li><span class="benefit-highlight">Thời gian làm việc:</span> 8 tiếng 30 phút/ngày, tháng off 4 ngày có lương</li>
                             <li><span class="benefit-highlight">Môi trường:</span> Sáng tạo, tự do, linh hoạt thời gian</li>
                             <li><span class="benefit-highlight">Đào tạo:</span> Được học hỏi kỹ thuật mới và xu hướng video</li>
                             <li><span class="benefit-highlight">Chế độ:</span> Thưởng theo dự án, du lịch team building</li>
@@ -1253,6 +1325,13 @@
                         <div class="highlight-info">
                             <h4>Mức Lương</h4>
                             <p>8-15 triệu + Hoa hồng</p>
+                        </div>
+                    </div>
+                    <div class="highlight-item">
+                        <span class="highlight-icon">⏰</span>
+                        <div class="highlight-info">
+                            <h4>Thời gian</h4>
+                            <p>13-16h & 19-22h</p>
                         </div>
                     </div>
                     <div class="highlight-item">
@@ -1294,6 +1373,7 @@
                         <h3>🎁 Quyền Lợi</h3>
                         <ul>
                             <li><span class="benefit-highlight">Thu nhập hấp dẫn:</span> Lương cơ bản 8-15 triệu + 9-22% Hoa hồng</li>
+                            <li><span class="benefit-highlight">Thời gian làm việc:</span> 6 tiếng/ngày, tháng off 4 ngày có lương</li>
                             <li><span class="benefit-highlight">Thưởng:</span> Thưởng doanh số, thưởng KPI, thưởng định kỳ</li>
                             <li><span class="benefit-highlight">Đào tạo:</span> Đào tạo bài bản và nhiệt tình trong suốt thời gian thử việc</li>
                             <li><span class="benefit-highlight">Thăng tiến:</span> Lộ trình thăng tiến rõ ràng theo năng lực</li>
