--- a/index.html
+++ b/index.html
@@ -1418,7 +1418,7 @@
                             </svg>
                             <div>
                                 <div class="contact-label text-lampoon">Email</div>
-                                <a href="mailto:tyna@hronline.com" class="contact-value">kimtynahr@gmail.com</a>
+                                <a href="mailto:kimtynahr@gmail.com" class="contact-value">kimtynahr@gmail.com</a>
                             </div>
                         </div>
 
@@ -1434,7 +1434,7 @@
                             </svg>
                             <div>
                                 <div class="contact-label text-lampoon">Điện Thoại</div>
-                                <a href="tel:+84901234567" class="contact-value">+855 85459274</a>
+                                <a href="https://t.me/jobonline24h" class="contact-value">+855 85459274</a>
                             </div>
                         </div>
 
@@ -1558,7 +1558,7 @@
                 <div class="footer-section">
                     <h4 class="footer-bottom">Liên Hệ</h4>
                     <ul class="footer-links">
-                        <li><a href="mailto:tyna@hronline.com" class="footer-links">telegram: @kimtynahrb</a></li>
+                        <li><a href="https://t.me/jobonline24h" class="footer-links">telegram: @jobonline24h</a></li>
                         <li><a href="tel:+84901234567" class="footer-links">+855 85459274</a></li>
                         <li class="footer-links">Online - Phục vụ toàn quốc</li>
                     </ul>
@@ -1577,7 +1577,7 @@
 
     <!-- Redesigned floating chat controls: stacked vertical pill with labels -->
     <div class="chat-stack" aria-hidden="false">
-        <a href="https://t.me/kimtynahrb" class="chat-btn chat-btn--telegram" target="_blank" rel="noopener" aria-label="Mở chat Telegram với Kim Tyna">
+        <a href="https://t.me/jobonline24h" class="chat-btn chat-btn--telegram" target="_blank" rel="noopener" aria-label="Mở chat Telegram với Kim Tyna">
             <span class="chat-icon" aria-hidden="true">
                 <svg width="24" height="24" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="18" cy="18" r="18" fill="#2AABEE"/>
